$Id: ChangeLog,v 1.112 2005/01/31 21:00:19 h_oudejans Exp $

2004-02-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed updating the popup menu's for mapper and ips
	* Restricted the history to 25 items (hardcoded for now)

2004-01-31 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fix IPS and mapper support
	* Added multiple IPS and disk IPS.	

2004-01-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed problems with non-lowercase settings in the audiopage
	* Made some more adjustments for wxmsw 2.5 with unicode

2004-01-09 Manuel Bilderbeek <manuel@msxnet.org>
	* Fixed fps counter on wx unicode.

2004-01-08 Manuel Bilderbeek <manuel@msxnet.org>
	* Added tool tips for new menus. Fixed some typos.

2004-01-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult now works with wxWidgets 2.5.3, however the main screen
	  appears to be too wide.
	* Catapult is now 100% unicode compatible.
	* Added possibility to drop files on diskA,diskB, etc, but that doesn't
	  work in wxmsw because of (yet another) bug in wxWidgets.
	* Added compile targets in vc++ to compile in 2.5.3 with or without
	  unicode. wx2.4 targets are also still available.

2004-12-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed some non-game romtypes
	* Made the romtype dialog autosizing by contents
	* Added Cassette stuff by popup menu
	* Fixed some minor bugs and warnings

2004-12-25 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added popup menu's to the sessionpage.
	* Added romtype selection (romtypes are hardcoded for now)
	* Added IPS selection
	* Added Browse for directory (dirasdisk)
	* Added Empty disk

2004-12-13 Manuel Bilderbeek <manuel@msxnet.org>
	* Added proper enable/disable behaviour for Clear and Type buttons on
	  InputPage

2004-12-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed info2code.mk so config.h and version.ii are created with
	  wxT macro's
	* removed wxT macro where used in combination with XRCID since
	  this also includes the wxT macro.